<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:orientation="vertical"
    tools:context=".AddHobbyActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_Hobby"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="30dp"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_hobby_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_hobby"
        android:textAlignment="center"
        android:layout_marginTop="40dp"
        android:textSize="25dp"
        />

    <Button
        android:id="@+id/b_add_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="60dp"
        android:text="@string/b_add_hobby"
        android:textColor="@android:color/white"
        android:background="@android:color/holo_blue_light"
        />

    <Button
        android:id="@+id/b_view_hobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="180dp"
        android:layout_marginTop="-48dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/b_view_hobby"
        android:textColor="@android:color/white" />
</LinearLayout>